--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,14 @@
         </activity>
         <activity android:name=".TimerActivity"  >
         </activity>
+        <activity android:name=".Buzzer2" >
+        </activity>
+        <activity android:name=".Buzzer3" >
+        </activity>
+        <activity android:name=".Buzzer4" >
+        </activity>
+        <activity android:name=".StatisticsActivity" >
+        </activity>
     </application>
 
 </manifest>
